# cida

./: .gitignore  README.md  cli.py  models.py  pyproject.toml
actuarial/: __init__.py  model.py  posterior_update.py  premium.py
backtest/: __init__.py  runner.py
catalog/: loader.py
cida/: __init__.py  cli.py  models.py
cida/actuarial/: __init__.py  model.py  posterior_update.py  premium.py
cida/backtest/: __init__.py  runner.py
cida/catalog/: __init__.py  control_catalog.yaml  loader.py
config/: README.md  __init__.py  fx_rates.yaml  loader.py  scoring_weights.yaml
docs/: ARCHITECTURE.md
enrich/: __init__.py  calibration.py  cve.py  cwe.py
examples/: sample_org_profile.yaml
ingest/: README.md  __init__.py  attack_surface.py  cida_docx.py  cspm_aws.py  cspm_azure.py  cspm_gcp.py  darkweb.py  dmarc.py  findings.py  nessus.py  project.py  questionnaire.py  sniffer.py  vapt_pdf.py
ml/: __init__.py  anomaly.py  breach_classifier.py  modifier.py  peer_accumulated.json  peer_benchmarks.yaml  peer_store.py
posture/: __init__.py  compliance.py
report/: __init__.py  renderer.py
scoring/: __init__.py  engine.py  risk_summary.py  vectors.py
scripts/: generate_countries.py
tests/: test_actuarial.py  test_anomaly.py  test_attack_surface.py  test_backtest.py  test_breach_classifier.py  test_calibration.py  test_config.py  test_cspm.py  test_darkweb.py  test_dmarc.py  test_docx_ingest.py  test_ingest.py  test_intel.py  test_ml.py  test_nessus.py  test_peer_store.py  test_posture.py  test_risk_summary.py  test_scoring.py  test_smoke.py  test_sniffer.py
(+279 files in other folders)
