[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cida"
version = "0.1.0"
description = "CIDA - Cyber Intelligence Decision Algorithm. Underwriting decision-support engine for cyber insurance carriers in Africa."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aajimatics" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "xhtml2pdf>=0.2.13",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5", "xgboost>=2.0"]
pdf = ["weasyprint>=62"]
pdf-ingest = ["pdfplumber>=0.11", "python-docx>=1.1"]
llm = ["openai>=1.30", "anthropic>=0.30"]
bayesian = ["pymc>=5.10", "arviz>=0.17"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
all = ["cida[ml,pdf,pdf-ingest,llm,bayesian,dev]"]

[project.scripts]
cida = "cida.cli:app"

[tool.setuptools.packages.find]
include = ["cida*"]

[tool.setuptools.package-data]
cida = ["config/**/*.yaml", "config/**/*.csv", "report/templates/*.j2", "report/templates/*.css"]

[tool.ruff]
line-length = 110
target-version = "py311"
